.argocd-state/vaultwarden/vaultwarden/templates/statefulset.yaml
---
# Source: vaultwarden/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app.kubernetes.io/component: vaultwarden
    helm.sh/chart: vaultwarden-0.46.3
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/version: "1.37.4"
    app.kubernetes.io/managed-by: Helm
spec:
  serviceName: vaultwarden
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: vaultwarden
      app.kubernetes.io/name: vaultwarden
      app.kubernetes.io/instance: vaultwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/component: vaultwarden
        app.kubernetes.io/name: vaultwarden
        app.kubernetes.io/instance: vaultwarden
      annotations:
        checksum/config: 2146b7804be9699e2f81b8d2a8fa2e522a364404
        checksum/secret: 1ee806aaf5aced5f44f8b19e40d70c6ebb8ffa32
    spec:
      
      containers:
        - image: docker.io/vaultwarden/server:1.37.4-alpine
          imagePullPolicy: IfNotPresent
          name: vaultwarden
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: vaultwarden-pvc
              mountPath: /data
          resources:
            limits:
              memory: 100Mi
            requests:
              cpu: 10m
              memory: 100Mi
          livenessProbe:
            httpGet:
              path: /alive
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /alive
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
      serviceAccountName: vaultwarden-svc
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  volumeClaimTemplates:
    - metadata:
        name: vaultwarden-pvc
        labels:
          app.kubernetes.io/component: vaultwarden
          app.kubernetes.io/name: vaultwarden
          app.kubernetes.io/instance: vaultwarden
        annotations:
          meta.helm.sh/release-name: "vaultwarden"
          meta.helm.sh/release-namespace: "vaultwarden"
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 1Gi
