.argocd-state/vaultwarden/vaultwarden/templates/service.yaml
---
# Source: vaultwarden/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app.kubernetes.io/component: vaultwarden
    helm.sh/chart: vaultwarden-0.46.3
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/version: "1.37.4"
    app.kubernetes.io/managed-by: Helm
spec:
  type: "ClusterIP"
  selector:
    app.kubernetes.io/component: vaultwarden
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: vaultwarden
  ports:
    - name: "http"
      port: 80
      protocol: TCP
      targetPort: 8080
  ipFamilyPolicy: SingleStack
